# OpenEnv

./: Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: baseline.py
env/: environment.py  grader.py  tasks.py
server/: app.py
